8009761: Deoptimization on sparc doesn't set Llast_SP correctly in the interpreter frames it creates

Deoptimization doesn't set up callee frames so that they restore caller frames correctly.

Reviewed-by: kvn