hotspot/src/share/vm/runtime/vframeArray.hpp
@@ -88,6 +88,7 @@ class vframeArrayElement : public _ValueObj {
   int on_stack_size(int caller_actual_parameters,
                     int callee_parameters,
                     int callee_locals,
+                    bool is_bottom_frame,
                     bool is_top_frame,
                     int popframe_extra_stack_expression_els) const;
 
@@ -97,6 +98,7 @@ class vframeArrayElement : public _ValueObj {
                        int callee_locals,
                        frame* caller,
                        bool is_top_frame,
+                       bool is_bottom_frame,
                        int exec_mode);
 
 #ifndef PRODUCT
